# pynas

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: README.md  download_hf_datasets.py
docs/: Abstract.txt  Authors.txt  Title.txt  index.html  method.txt  results.txt
notebooks/: how_to_start.ipynb
scripts/: README.md
src/: config.ini
src/pynas/core/: config.ini  population.py
